[tool.poetry]
name = "loglizer"
version = "0.1.0"
description = ""
authors = ["Jens X Augustsson <jens@augustsson.eu>"]

[tool.poetry.dependencies]
python = "~3.7.1"
sklearn = "^0.0"
pandas = "^1.2.3"
numpy = "^1.20.2"
torch = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
